Fix snackbar wrapping

--- a/src/app/shared/components/wishlist-snackbar/wishlist-snackbar.component.less
+++ b/src/app/shared/components/wishlist-snackbar/wishlist-snackbar.component.less
@@ -2,6 +2,7 @@
 .label {
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
+  //white-space: nowrap;
 }
 
 button {
@@ -34,7 +35,7 @@ button {
   color: #0c1c31;
   margin: 0 0 3rem 0 !important;
   border-radius: 0;
-
+  max-width: 50vw;
 }
 
 ::ng-deep.visible-none {
@@ -45,6 +46,7 @@ button {
   background: #f2f4f3;
   width: 100%;
   color: #0c1c31;
+  max-width: 100%;
   margin: 0 !important;
   border-radius: 0;
 }
